# sshplan

./: Cargo.toml  README.md
demo/: terminal.md
examples/: policy.yaml
src/: artifacts.rs  evaluator.rs  main.rs  plan.rs  policy.rs
tests/: cli.rs
