[package]
name = "accessc"
version = "0.1.0"
edition = "2021"
description = "Compile access policy into OpenSSH config, issuance plans, and audit receipts"
license = "MIT"
repository = "https://github.com/Qarait/accessc"
readme = "README.md"
keywords = ["openssh", "ssh", "authorization", "access-control", "security"]
categories = ["command-line-utilities", "authentication"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noyalib = "0.0.8"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "accessc"
path = "src/main.rs"
